name:           pg-schema-tutorial-db
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/odr/pg-schema/tree/master/pg-schema-tutorial>
homepage:       https://github.com/odr/pg-schema#readme
bug-reports:    https://github.com/odr/pg-schema/issues
author:         Dmitry Olshansky
maintainer:     olshanskydr@gmail.com
copyright:      Dmitry Olshansky
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/odr/pg-schema

library
  exposed-modules:
    Sch
  other-modules:
    Paths_pg_schema_tutorial_db
  hs-source-dirs:
    src
  build-depends:
      base >=4.7 && <5
    , pg-schema
  default-language: Haskell2010
  default-extensions:
      AllowAmbiguousTypes
    , ConstraintKinds
    , DataKinds
    , DeriveGeneric
    , EmptyCase
    , ExistentialQuantification
    , FlexibleContexts
    , FlexibleInstances
    , FunctionalDependencies
    , GADTs
    , GeneralizedNewtypeDeriving
    , InstanceSigs
    , LambdaCase
    , MultiParamTypeClasses
    , OverloadedLabels
    , OverloadedStrings
    , QuasiQuotes
    , RecordWildCards
    , ScopedTypeVariables
    , TemplateHaskell
    , TupleSections
    , TypeApplications
    , TypeFamilies
    , TypeInType
    , TypeOperators
