name:           pg-schema-tutorial
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/odr/pg-schema/tree/master/pg-schema-tutorial>
homepage:       https://github.com/odr/pg-schema#readme
bug-reports:    https://github.com/odr/pg-schema/issues
author:         Dmitry Olshansky
maintainer:     olshanskydr@gmail.com
copyright:      Dmitry Olshansky
license:        BSD3
license-file:   LICENSE
build-type:     Custom
cabal-version:  >= 1.10
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/odr/pg-schema

executable pg-schema-tutorial
  main-is: Main.hs
  other-modules:
      Paths_pg_schema_tutorial
      Sch
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , base >=4.7 && <5
    , generic-random
    , pg-schema
    -- , pg-schema-tutorial-db
    , postgresql-simple
    , template-haskell
    , text
    , time
    , QuickCheck
    , quickcheck-instances
  default-language: Haskell2010
  default-extensions:
      DataKinds
    , DeriveGeneric
    , FlexibleInstances
    , MultiParamTypeClasses
    , OverloadedLabels
    , OverloadedStrings
    , TemplateHaskell
    , TypeApplications
    , TypeFamilies

custom-setup
  setup-depends:
    base >= 4.7 && <5,
    Cabal,
    pg-schema
