name:           pg-schema-tutorial
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/odr/pg-schema/tree/master/pg-schema-tutorial>
homepage:       https://github.com/odr/pg-schema#readme
bug-reports:    https://github.com/odr/pg-schema/issues
author:         Dmitry Olshansky
maintainer:     olshanskydr@gmail.com
copyright:      Dmitry Olshansky
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/odr/pg-schema

executable pg-schema-tutorial-generator
  main-is: Main.hs
  hs-source-dirs:
    generator
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base >= 4.8 && <5,
    pg-schema

executable pg-schema-tutorial
  main-is: Main.hs
  other-modules:
      -- Paths_pg_schema_tutorial
      Sch
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , base >=4.7 && <5
    , generic-random
    , hashable
    , pg-schema
    , postgresql-simple
    , template-haskell
    , deepseq
    , text
    , time
    , QuickCheck
    , quickcheck-instances
    , singletons
  default-language: Haskell2010
  default-extensions:
      DataKinds
    , DeriveGeneric
    , FlexibleInstances
    , ImportQualifiedPost
    , MultiParamTypeClasses
    , OverloadedStrings
    , TemplateHaskell
    , TypeApplications
    , TypeFamilies
    , TypeOperators
