cabal-version:  3.12
name:           pg-schema-tutorial
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/odr/pg-schema/tree/master/pg-schema-tutorial>
homepage:       https://github.com/odr/pg-schema#readme
bug-reports:    https://github.com/odr/pg-schema/issues
author:         Dmitry Olshansky
maintainer:     olshanskydr@gmail.com
copyright:      Dmitry Olshansky
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/odr/pg-schema

executable pgs-tutorial-generator
  main-is: Main.hs
  other-modules:
    -- Paths and PackageInfo
    Paths_pg_schema_tutorial
    PackageInfo_pg_schema_tutorial
  autogen-modules:
    Paths_pg_schema_tutorial
    PackageInfo_pg_schema_tutorial
  hs-source-dirs: generator
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base >= 4.8 && <5,
    pg-schema

executable pgs-tutorial
  main-is: Main.hs
  other-modules:
    Sch
    -- Paths and PackageInfo
    Paths_pg_schema_tutorial
    PackageInfo_pg_schema_tutorial
  autogen-modules:
    Paths_pg_schema_tutorial
    PackageInfo_pg_schema_tutorial
  hs-source-dirs: app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , base >=4.7 && <5
    , deepseq
    , generic-random
    , hashable
    , pg-schema
    , postgresql-simple
    , template-haskell
    , tagged
    , text
    , time
    , QuickCheck
    , quickcheck-instances
    , scientific
    , singletons
  default-language: Haskell2010
  default-extensions:
      DataKinds
    , DeriveGeneric
    , FlexibleInstances
    , ImportQualifiedPost
    , MultiParamTypeClasses
    , OverloadedStrings
    , TemplateHaskell
    , TypeApplications
    , TypeFamilies
    , TypeOperators
