cabal-version:  3.12
name:           pg-schema
version:        0.5.0.0
description:    Please see the README on GitHub at <https://github.com/odr/pg-schema#readme>
homepage:       https://github.com/odr/pg-schema#readme
bug-reports:    https://github.com/odr/pg-schema/issues
author:         Dmitry Olshansky
maintainer:     olshanskydr@gmail.com
copyright:      Dmitry Olshansky
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/odr/pg-schema

flag arbitrary
  description: Make Arbitrary instances for all types (Enums, PgTagged, SchList)
  manual:      True
  default:     False

flag debug
  description: Trace queries
  manual:      True
  default:     False

flag flat
  description: Make Flat instances for all types (Enums, PgTagged, SchList)
  manual:      True
  default:     False

flag hashable
  description: Make Hashable instances for all types (Enums, PgTagged, SchList)
  manual:      True
  default:     False

library
  exposed-modules:
    PgSchema
    PgSchema.DML.Delete
    PgSchema.DML.Insert
    PgSchema.DML.InsertJSON
    PgSchema.DML.Insert.Types
    PgSchema.DML.Select
    PgSchema.DML.Select.Types
    PgSchema.DML.Update
    PgSchema.Types
    PgSchema.HList
    PgSchema.GenDef
    PgSchema.Schema
    PgSchema.Utils.GenDot
  other-modules:
    PgSchema.HList.Internal
    PgSchema.HList.Rec
    PgSchema.HList.Utils
    PgSchema.HList.Class
    PgSchema.HList.HListInfo
    PgSchema.HList.Type
    PgSchema.Schema.Catalog
    PgSchema.Schema.Info
    PgSchema.Utils.Internal
    PgSchema.Utils.ShowType
  --   Paths_pg_schema
  hs-source-dirs: src
  build-depends:
      base >= 4.20
    , aeson
    , bytestring
    , case-insensitive
    , containers
    , directory
    , exceptions
    , mtl
    , postgresql-simple
    , scientific
    , singletons
    , singletons-base
    , singletons-th
    , tagged
    , text
    , time
    , uuid-types
  if flag(flat)
    build-depends: flat
    cpp-options: -DMK_FLAT
  if flag(arbitrary)
    build-depends:
      QuickCheck
    cpp-options: -DMK_ARBITRARY
  if flag(hashable)
    build-depends:
      hashable
    cpp-options: -DMK_HASHABLE
  if flag(debug)
    cpp-options: -DDEBUG
  ghc-options:
    -Wall
    -Wunused-packages
  default-language: GHC2021
  default-extensions:
    AllowAmbiguousTypes
    BlockArguments
    ExplicitNamespaces
    DataKinds
    -- ^^^ added in GHC2024
    DerivingStrategies
    FunctionalDependencies
    LambdaCase
    -- ^^^ added in GHC2024
    MultiWayIf
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    RecordWildCards
    RequiredTypeArguments
    TemplateHaskell
    TypeAbstractions
    TypeFamilies
    ViewPatterns

test-suite doctest
  type: exitcode-stdio-1.0
  main-is: doctest.hs
  other-modules: HListDoctest
  hs-source-dirs: test
  build-depends:
      base
    , aeson
    , bytestring
    , doctest
    , pg-schema
  build-tool-depends: doctest:doctest
  default-language: GHC2021
  ghc-options: -Wall

executable test-gen
  main-is:          Main.hs
  build-depends:    base, postgresql-simple, directory, pg-schema, bytestring
  hs-source-dirs:   test-gen

test-suite test-pgs
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    Sch
    Tests.Aggregates
    Tests.BaseConverts
    Tests.Conditions
    Tests.Hierarchy
    Tests.Path
    Utils
  hs-source-dirs:   test-pgs
  default-extensions:
    AllowAmbiguousTypes
    BlockArguments
    ExplicitNamespaces
    DataKinds
    -- ^^^ added in GHC2024
    DerivingStrategies
    FunctionalDependencies
    LambdaCase
    -- ^^^ added in GHC2024
    MultiWayIf
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    RecordWildCards
    RequiredTypeArguments
    TemplateHaskell
    TypeAbstractions
    TypeFamilies
    ViewPatterns
  build-depends:
    base,
    aeson,
    pg-schema,
    bytestring,
    singletons,
    singletons-base,
    case-insensitive,
    hedgehog >= 1.1,
    postgresql-simple,
    resource-pool,
    scientific,
    tagged,
    tasty >= 1.4,
    tasty-hedgehog >= 1.2,
    text,
    time,
    unordered-containers,
    uuid-types,
    vector,
    -- they can be excluded by flags
    hashable,
    deepseq
    ---------------
  default-language: GHC2021
