cabal-version:  3.12
name:           pg-schema
version:        0.5.0.0
category:       Database
author:         Dmitry Olshansky
maintainer:     olshanskydr@gmail.com
copyright:      Dmitry Olshansky
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
synopsis:       Type-level definition of database schema and safe DML for PostgreSQL.
description:
    === Type-level definition of database schema and safe DML for PostgreSQL.

    There is

    * flexible generation of type-level definition of database schema

    * safe generation of performant DML for PostgreSQL

    === TLDR;

    @
    data Order = Order { num :: Text, created_at :: Day, items :: [OrdPos] } deriving Generic
    data OrdPos = OrdPos { id :: Int32, num :: Int32, article :: Article, price :: Double } deriving Generic
    data Article = Article { id :: Int32, name :: Text } deriving Generic
        ...
    do
      void $ insertJSON_ RenamerId Sch ("dbs" ->> "orders") conn
        [ "num" =: "num1" :. "ord__ord_pos" =:
          [ "num" =: 1 :. "article_id" =: 42 :. "price" =: 10
          , "num" =: 2 :. "article_id" =: 41 :. "price" =: 15 ]
        ]
      (xs :: [Order]) <- selectSch RenamerId Sch ("dbs" ->> "orders") conn
        $ qRoot do
          qWhere $ "created_at" >? someDay
            &&& pchild "ord__ord_pos" defTabParam
              (pparent "ord_pos__article" $ "name" ~~? "%pencil%")
          qOrderBy [descf "created_at", descf "num"]
          qPath "ord__ord_pos" do
            qWhere $ pparent "ord_pos__article" $ "name" ~~? "%pencil%"
            qOrderBy [ascf "num"]
          qLimit 20
    @

    === Module structure

    * "PgSchema.Generation" - module with generation functions.
      Usually you make executable which generates schema definition using this module.
    * "PgSchema.DML" - module with DML functions. Import this module into your application.
    * "PgSchema.Import" - generated schema module import this module.

homepage:       https://github.com/odr/pg-schema#readme
bug-reports:    https://github.com/odr/pg-schema/issues
extra-doc-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/odr/pg-schema

flag arbitrary
  description: Make Arbitrary instances for all types (Enums, PgTagged, SchList)
  manual:      True
  default:     False

flag debug
  description: Trace queries
  manual:      True
  default:     False

flag flat
  description: Make Flat instances for all types (Enums, PgTagged, SchList)
  manual:      True
  default:     False

flag hashable
  description: Make Hashable instances for all types (Enums, PgTagged, SchList)
  manual:      True
  default:     False

library
  exposed-modules:
    -- PgSchema
    PgSchema.DML
    PgSchema.Generation
    PgSchema.Import
    PgSchema.Utils.GenDot
  other-modules:
    PgSchema.DML.Delete
    PgSchema.DML.Insert
    PgSchema.DML.InsertJSON
    PgSchema.DML.Insert.Types
    PgSchema.DML.Select
    PgSchema.DML.Select.Types
    PgSchema.DML.Update
    PgSchema.HList
    PgSchema.Schema
    PgSchema.HList.Internal
    PgSchema.HList.Rec
    PgSchema.HList.Utils
    PgSchema.HList.Class
    PgSchema.HList.HListInfo
    PgSchema.HList.Type
    PgSchema.Schema.Catalog
    PgSchema.Schema.Info
    PgSchema.Types
    PgSchema.Utils.CamelToSnake
    PgSchema.Utils.Internal
    PgSchema.Utils.ShowType
    --
    Paths_pg_schema
    PackageInfo_pg_schema
  autogen-modules:
    Paths_pg_schema
    PackageInfo_pg_schema
  hs-source-dirs: src
  build-depends:
      base >= 4.20 && < 5
    , aeson >= 2.0 && < 2.3
    , bytestring >= 0.10 && < 0.13
    , case-insensitive >= 1.0 && < 1.3
    , containers >= 0.7 && < 0.9
    , directory >= 1.3 && < 1.5
    , exceptions >= 0.9 && < 0.11
    , mtl >= 2.0 && < 2.4
    , postgresql-simple >= 0.6 && < 0.8
    , scientific >= 0.2 && < 0.4
    , singletons >= 3.0.3 && < 3.1
    , singletons-base >= 3.4 && < 3.6
    , singletons-th >= 3.4 && < 3.6
    , tagged >= 0.8.8 && < 0.9
    , text >= 2.0 && < 2.2
    , time >= 1.12 && < 2
    , uuid-types >= 1.0 && < 1.1
  if flag(flat)
    build-depends: flat >= 0.6 && < 0.7
    cpp-options: -DMK_FLAT
  if flag(arbitrary)
    build-depends:
      QuickCheck >= 2.14.0 && < 2.18
    cpp-options: -DMK_ARBITRARY
  if flag(hashable)
    build-depends:
      hashable >= 1.5.1 && < 1.6
    cpp-options: -DMK_HASHABLE
  if flag(debug)
    cpp-options: -DDEBUG
  ghc-options:
    -Wall
    -Wunused-packages
  default-language: GHC2021
  default-extensions:
    AllowAmbiguousTypes
    BlockArguments
    ExplicitNamespaces
    DataKinds
    -- ^^^ added in GHC2024
    DerivingStrategies
    FunctionalDependencies
    LambdaCase
    -- ^^^ added in GHC2024
    MultiWayIf
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    RecordWildCards
    RequiredTypeArguments
    TemplateHaskell
    TypeAbstractions
    TypeFamilies
    ViewPatterns

test-suite doctest
  type: exitcode-stdio-1.0
  main-is: doctest.hs
  other-modules:
    HListDoctest
    -- Paths and PackageInfo
    Paths_pg_schema
    PackageInfo_pg_schema
  autogen-modules:
    Paths_pg_schema
    PackageInfo_pg_schema
  hs-source-dirs: test
  build-depends:
      base
    , aeson
    , bytestring
    , doctest
    , pg-schema
  build-tool-depends: doctest:doctest
  default-language: GHC2021
  ghc-options: -Wall

executable test-gen
  main-is:          Main.hs
  other-modules:
    -- Paths and PackageInfo
    Paths_pg_schema
    PackageInfo_pg_schema
  autogen-modules:
    Paths_pg_schema
    PackageInfo_pg_schema
  build-depends:
      base >= 4.21.0 && < 4.22
    , bytestring >= 0.12.2 && < 0.13
    , directory >= 1.3.9 && < 1.4
    , pg-schema
    , postgresql-simple >= 0.6 && < 0.8
  hs-source-dirs:   test-gen
  default-language: GHC2021

test-suite test-pgs
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    Sch
    Tests.Aggregates
    Tests.BaseConverts
    Tests.Conditions
    Tests.Hierarchy
    Tests.Path
    Utils
    -- Paths and PackageInfo
    Paths_pg_schema
    PackageInfo_pg_schema
  autogen-modules:
    Paths_pg_schema
    PackageInfo_pg_schema
  hs-source-dirs:   test-pgs
  default-extensions:
    AllowAmbiguousTypes
    BlockArguments
    ExplicitNamespaces
    DataKinds
    -- ^^^ added in GHC2024
    DerivingStrategies
    FunctionalDependencies
    LambdaCase
    -- ^^^ added in GHC2024
    MultiWayIf
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    RecordWildCards
    RequiredTypeArguments
    TemplateHaskell
    TypeAbstractions
    TypeFamilies
    ViewPatterns
  build-depends:
    base,
    aeson,
    pg-schema,
    bytestring,
    singletons,
    singletons-base,
    case-insensitive,
    hedgehog >= 1.1,
    postgresql-simple,
    resource-pool,
    scientific,
    tagged,
    tasty >= 1.4,
    tasty-hedgehog >= 1.2,
    text,
    time,
    unordered-containers,
    uuid-types,
    vector,
    -- they can be excluded by flags
    hashable,
    deepseq
    ---------------
  default-language: GHC2021
