cabal-version:      3.0
name:               tutorial
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             odr
maintainer:         dima@typeable.io
-- copyright:
category:           Database
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable generator
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.21.0.0,
        pg-schema

    hs-source-dirs:   generator
    default-language: GHC2024


executable tutorial
    import:           warnings
    main-is:          Main.hs
    other-modules:
        Sch
    -- other-extensions:
    build-depends:
        base ^>=4.21.0.0,
        deepseq,
        hashable,
        pg-schema,
        postgresql-simple,
        text

    hs-source-dirs:   app
    default-language: GHC2024
